-attempted fix at tooltip hovered name size being small -fixed graphical overflow with items on smaller windows -build item tooltip shows on right now

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 	display: flex;
 	flex-direction: row;
 	flex-grow: 1;
+	overflow:auto;
 }
 .LegalJibberJabber{
 	flex-grow:0;
